<resources>
    <string name="app_name">Food Scanner</string>
    <string name="contact_email">foodscanner@airmail.cc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_scan">Scan</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_about">About</string>
    <string name="drawer_licenses">Open Source Licenses</string>

    <string name="main_instructions">1. Press the camera button (bottom right)\n2. Take image\n3. Crop image\n4. Analyze result</string>
    <string name="main_no_database_warn"><b>WARNING</b>: No database is included in this version of the application. Additive marking will <u>NOT</u> work!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="help_title">Help</string>

    <!-- Permissions -->
    <string name="permission_dialog_denied_title">Change Permissions in Settings</string>
    <string name="permission_dialog_denied_content_storage">The application will NOT work without the Storage permission. You should change it by clicking on settings.</string>
    <string name="permission_dialog_denied_settings">SETTINGS</string>

    <!-- OCR Progress notifications -->
    <string name="ocr_progress_notification_title">Warning!</string>
    <string name="ocr_progress_notification_body">The OCR progress might take a few seconds.
        Please wait.
    </string>
    <string name="ocr_progress_percentage">%1$d%%</string>
    <string name="tesseract_progress_too_long_text">Process taking too long?</string>
    <string name="tesseract_progress_too_long_cancel_btn">Cancel</string>

    <!-- Strings related to Settings -->
    <string name="settings_enable_debug">Debug Mode</string>

    <!-- Result Display -->
    <string name="result_instructions_title">Result</string>
    <string name="result_instructions_body">The result is displayed in the image below;\n\u2022 The colored words (if any) represent additives.\n\u2022 You can click on any of the words to view its details - in case of additives you will be able to see the additive\'s information.\n\u2022 If the word was recognized wrongly, you can manually correct it.</string>
    <string name="result_finish_button">Finish</string>

    <!-- Danger Levels -->
    <string name="legend_danger_levels">Additive danger levels:</string>
    <string name="danger_level_safe">Safe</string>
    <string name="danger_level_dangerous">Dangerous</string>
    <string name="danger_level_extremely_dangerous">Extremely dangerous</string>
    <string name="danger_level_suspicious">Suspicious</string>
    <string name="danger_level_unknown">Unknown</string>


    <!-- Details -->
    <string name="details_merge_text">Merge with previous / next</string>
    <string name="details_merge_left_description">Merge with previous word</string>
    <string name="details_merge_right_description">Merge with next word</string>
    <string name="details_word_label">Word</string>
    <string name="details_description_no_info">No additive</string>
    <string name="details_description_not_available">No additive description available.</string>


    <!-- Licenses -->
    <string name="license_tesstwo_name">tess-two</string>
    <string name="license_tesstwo_text">Copyright 2011 Robert Theis\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <string name="license_imagecropper_name">Android Image Cropper</string>
    <string name="license_imagecropper_text">Copyright 2016, Arthur Teplitzki, 2013, Edmodo, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this work except in compliance with the License. You may obtain a copy of the License in the LICENSE file, or at:\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <string name="license_sqlitehelper_name">Android SQLiteAssetHelper</string>
    <string name="license_sqlitehelper_text">Copyright © 2011 readyState Software Ltd\nCopyright © 2007 The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>


    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_content">This application is one of the products made for an undergraduate thesis. More specifically the thesis presents an example of the formal software engineering process. As such it consists of two parts - the software engineering documentation and the product - this application. It is worth noting, that this application is still in the prototype phase.</string>
</resources>
