<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:title="@string/drawer_scan" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/drawer_settings" />
        <!--<item-->
            <!--android:id="@+id/nav_help"-->
            <!--android:title="@string/drawer_help" />-->
        <item
            android:id="@+id/nav_about"
            android:title="@string/drawer_about" />

        <item
            android:id="@+id/nav_licenses"
            android:title="@string/drawer_licenses" />
    </group>

</menu>
