<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/license_tesstwo_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/license_tesstwo_name"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/license_tesstwo_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="#eeeeee"
            android:fontFamily="monospace"
            android:text="@string/license_tesstwo_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_tesstwo_name" />

        <TextView
            android:id="@+id/license_imagecropper_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/license_imagecropper_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_tesstwo_text" />

        <TextView
            android:id="@+id/license_imagecropper_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="#eeeeee"
            android:fontFamily="monospace"
            android:text="@string/license_imagecropper_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_imagecropper_name" />

        <TextView
            android:id="@+id/license_sqlitehelper_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/license_sqlitehelper_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_imagecropper_text" />

        <TextView
            android:id="@+id/license_sqlitehelper_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="#eeeeee"
            android:fontFamily="monospace"
            android:text="@string/license_sqlitehelper_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_sqlitehelper_name" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>