<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scan_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scan_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/main_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_no_database_warn"
            android:text="@string/main_no_database_warn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_instructions" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scan_ocrprogress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tesseract_progress_notification_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ocr_progress_notification_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tesseract_progress_notification_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ocr_progress_notification_body"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tesseract_progress_notification_title" />

        <TextView
            android:id="@+id/tesseract_progress_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tesseract_progress_notification_body" />

        <TextView
            android:id="@+id/tesseract_progress_too_long_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tesseract_progress_too_long_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tesseract_progress_too_long_cancel_btn" />

        <Button
            android:id="@+id/tesseract_progress_too_long_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/tesseract_progress_too_long_cancel_btn"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scan_ocrresult_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/result_instructions_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            card_view:cardCornerRadius="8dp">

            <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/result_instructions_title"
                    android:id="@+id/result_instructions_title"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result_instructions_body"
                    android:id="@+id/result_instructions_body"
                    app:layout_constraintTop_toBottomOf="@id/result_instructions_title" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/result_image_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            card_view:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/result_instructions_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:id="@+id/result_image_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:id="@+id/result_ingredients_image"
                        android:layout_gravity="center_horizontal"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:id="@+id/result_ingredients_image_overlay"
                        android:layout_gravity="center_horizontal"/>

                </FrameLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_finish_button"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:background="@android:color/transparent"
                    android:id="@+id/result_finish_button"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    app:layout_constraintTop_toBottomOf="@id/result_image_wrapper"
                    app:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/result_danger_chart_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent" >

            <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" >

                <TextView
                    android:id="@+id/legend_danger_levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/legend_danger_levels" />

                <ImageView
                    android:id="@+id/dot_danger_level_safe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/dot_danger_level_safe"
                    app:layout_constraintTop_toBottomOf="@id/legend_danger_levels" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger_level_safe"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/dot_danger_level_safe"
                    app:layout_constraintTop_toTopOf="@id/dot_danger_level_safe"
                    app:layout_constraintBottom_toBottomOf="@id/dot_danger_level_safe" />

                <ImageView
                    android:id="@+id/dot_danger_level_dangerous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/dot_danger_level_dangerous"
                    app:layout_constraintTop_toBottomOf="@id/dot_danger_level_safe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger_level_dangerous"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/dot_danger_level_dangerous"
                    app:layout_constraintTop_toTopOf="@id/dot_danger_level_dangerous"
                    app:layout_constraintBottom_toBottomOf="@id/dot_danger_level_dangerous" />

                <ImageView
                    android:id="@+id/dot_danger_level_extremely_dangerous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/dot_danger_level_extremely_dangerous"
                    app:layout_constraintTop_toBottomOf="@id/dot_danger_level_dangerous" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger_level_extremely_dangerous"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/dot_danger_level_extremely_dangerous"
                    app:layout_constraintTop_toTopOf="@id/dot_danger_level_extremely_dangerous"
                    app:layout_constraintBottom_toBottomOf="@id/dot_danger_level_extremely_dangerous" />

                <ImageView
                    android:id="@+id/dot_danger_level_suspicious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/dot_danger_level_suspicious"
                    app:layout_constraintTop_toBottomOf="@id/dot_danger_level_extremely_dangerous" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger_level_suspicious"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/dot_danger_level_suspicious"
                    app:layout_constraintTop_toTopOf="@id/dot_danger_level_suspicious"
                    app:layout_constraintBottom_toBottomOf="@id/dot_danger_level_suspicious" />

                <ImageView
                    android:id="@+id/dot_danger_level_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/dot_danger_level_unknown"
                    app:layout_constraintTop_toBottomOf="@id/dot_danger_level_suspicious" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger_level_unknown"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/dot_danger_level_unknown"
                    app:layout_constraintTop_toTopOf="@id/dot_danger_level_unknown"
                    app:layout_constraintBottom_toBottomOf="@id/dot_danger_level_unknown" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scan_word_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="invisible">
        <android.support.v4.view.ViewPager
            android:id="@+id/result_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start_camera_float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/camera_button_margin"
        app:srcCompat="@android:drawable/ic_menu_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>