<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/details_background_layout"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/details_menu_merge_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/details_merge_left_description"
            android:src="@drawable/ic_white_merge_left"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/details_merge_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/details_menu_merge_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/details_merge_right_description"
            android:src="@drawable/ic_white_merge_right"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">


        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/details_word_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_word_label"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_word_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/details_word_label" />

            <EditText
                android:id="@+id/details_word_input_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/details_word_image" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <Button
                android:id="@+id/details_confirm_input_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/confirm_button_selector"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_word_input_text_field"
                app:layout_constraintTop_toTopOf="@id/details_word_input_text_field" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_description_no_info"
                android:textColor="@color/colorAccent"
                android:textAllCaps="true"
                android:id="@+id/details_description_text_view"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_additive_danger_level"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/details_additive_description"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>